feat: game page
