# backend/cmd/main.go
@@ -50,7 +50,6 @@ func main() {
 
 	// User routes
 	protected.GET("/users", user.GetAllUsersHandler(dbm.UserRepo))
-	protected.GET("/users/names", user.GetUserNamesFromIDs(dbm.UserRepo))
 	protected.GET("/users/me", user.GetCurrentUserHandler(dbm.UserRepo))
 
 	// Game routes
@@ -58,6 +57,7 @@ func main() {
 	protected.POST("/games/create", game.CreateGameHandler(dbm.GameRepo, dbm.UserRepo))
 	protected.GET("/games/:id", game.GetGameHandler(dbm.GameRepo))
 	protected.POST("/games/:id/join", game.JoinGameHandler(dbm.GameRepo, dbm.UserRepo))
+	protected.GET("/games/:id/players", game.GetPlayersUsernamesHandler(dbm.GameRepo, dbm.UserRepo))
 
 	r.Run(":8080")
 }
